# repoready

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  repoready.py  setup.py
assets/: demo-script.txt
docs/: SCORING.md
examples/: README.md  before-after.md  openclaw-report.md  repoready-self-report.md  sample-report.md
repoready.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
