[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repoready"
version = "0.1.0"
description = "Turn a rough codebase into a star-ready GitHub repo."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Yiming Wu", email = "yimwoo@users.noreply.github.com"}
]

[project.scripts]
repoready = "repoready:main"
